--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -918,6 +918,11 @@ $mobile_bp: 650px;
             min-width: 350px;
         }
     }
+
+    .buy-shares-left-col {
+        width: 100%;
+        max-width: 500px;
+    }
 }
 
 .position-relative {
